@@ -1,4 +1,6 @@
 jlatexmath (0.9.2)
+	* Fix bug with \over (http://bugzilla.scilab.org/show_bug.cgi?id=7226)
+	
         * Improve the render of a cfrac (thanks to Juan Enrique)
 
 	* Improve the way to get the arguments of a macro (thanks to Juan Enrique)
